chore: remove Arabic voice support
